try gfortran-6 on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: generic
 before_install:
-  - sudo apt-get install gfortran
+  - sudo apt-get install gfortran-6
 before_script:
   - cmake .
   - make
