--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: generic
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install gfortran-6
+  - sudo apt-get -qq update
+  - sudo apt-get install -y gfortran-6
 before_script:
   - cmake .
   - make
