--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: generic
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y gfortran-4.9
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gfortran-6
 before_script:
   - cmake .
   - make
