add build rule for empty unit test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ add_library(testing src/tests/mod_testing.f90)
 
 # tests
 enable_testing()
-foreach(execid arange complement filter foldl foldr foldt head init insert intersection iterfold last limit map reverse set sort split subscript tail unfold union)
+foreach(execid arange complement empty filter foldl foldr foldt head init insert intersection iterfold last limit map reverse set sort split subscript tail unfold union)
   add_executable(test_${execid} src/tests/test_${execid}.f90)
   target_link_libraries(test_${execid} functional testing)
   add_test(test_${execid} bin/test_${execid})
