don't make cmake look for C/C++ stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 # cmake version, project name, language
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
-project(functional-fortran)
-enable_language(Fortran)
+project(functional-fortran Fortran)
 
 # set output paths for modules, archives, and executables
 set(CMAKE_Fortran_MODULE_DIRECTORY ${PROJECT_BINARY_DIR}/include)
