--- a/fpm.toml
+++ b/fpm.toml
@@ -1,6 +1,9 @@
-name = "functional-fortran"
+name = "functional"
 version = "0.5.0"
 license = "BSD-3-Clause"
+author = "Milan Curcic"
+maintainer = "mcurcic@wavebitscientific.com"
+copyright = "Copyright (c) 2016-2020, Milan Curcic"
 
 [library]
 source-dir = "src/lib"
