--- a/fpm.toml
+++ b/fpm.toml
@@ -3,7 +3,7 @@ version = "0.5.0"
 license = "BSD-3-Clause"
 author = "Milan Curcic"
 maintainer = "mcurcic@wavebitscientific.com"
-copyright = "Copyright (c) 2016-2020, Milan Curcic"
+copyright = "Copyright (c) 2016-2020, functional-fortran contributors"
 
 [library]
 source-dir = "src/lib"
