--- a/fpm.toml
+++ b/fpm.toml
@@ -1,9 +1,6 @@
 name = "functional"
-version = "0.5.0"
+version = "0.6.0"
 license = "BSD-3-Clause"
 author = "Milan Curcic"
-maintainer = "mcurcic@wavebitscientific.com"
+maintainer = "milancurcic@hey.com"
 copyright = "Copyright (c) 2016-2020, functional-fortran contributors"
-
-[library]
-source-dir = "src/lib"
