--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        compiler: [gfortran-7, gfortran-8, gfortran-9]
+        compiler: [gfortran-8, gfortran-9]
 
     steps:
     - uses: actions/checkout@v2
